--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,7 @@ body {
   font-family: 'Gill Sans MT','Trebuchet MS', sans-serif;
   text-align: center;
 }
+.container_title_sub{
+  font-family:'Trebuchet MS', sans-serif;
+  text-align: center;
+}
